Fix test suite fails on test-dbus with --enable-tests (but no assertions).

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=83968
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>